src/test/deca/codegen/valid/homemade/test/test_complet_affectation_int_trop_grand_negatif.deca
{
    int x  = -2147483648;
    println("x = ", (x));
}