src/test/deca/codegen/invalid/homemade/test/test_complet_float_arrondi0_mult.deca
{
    float x  = 1.3e-45;
    x = x * 0.4;
    println("x = ", (x));
}